Remove shell code adding extra options for Java 9 and 10, use pom.xml instead.